Updated Milestone Report, added ConditionDaoImplTest.java